Registo/Login/GetFirstName&Photo
3 funcionalidades a funcionar já com ligação ao backend

--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -11,6 +11,12 @@
             
             <form id="registerForm">
                 <h2 class="registerH2" id="register-page-title">Register Page</h2>
+                <label class="registerLabel ownerOption" for="role">Role:</label><br>
+                <select class="registerSelect registerForm ownerOption" id="role" name="role">
+                    <option value="dev">Developer</option>
+                    <option value="sm">SCRUM Master</option>
+                    <option value="po">Product Owner</option>
+                    </select><br>
                 <label class="registerLabel"
                     for="username">Username:</label><br>
                 <input class="registerInput" type="text" id="username"
