--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -35,73 +35,73 @@
       <!--CONTAINER DAS ARGOLAS-->
       <div class="container-wrings">
         <img
-          id="argola1"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola2"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola3"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola4"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola5"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola6"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola7"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola8"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola9"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola10"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola11"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
         />
         <img
-          id="argola12"
+          class="argola"
           src="resources/Elements/argola.png"
           alt="argola"
           draggable="false"
