Adicionar Task por FE a funcionar
mas testa

--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -189,6 +189,10 @@
             <option value="high">High</option>
           </select>
         </div>
+        <div class="center-container">
+          <label for="taskCategory">Category:</label>
+          <select id="taskCategory" name="category"></select>
+        </div>
         <div class="buttons-container">
           <button id="cancelTaskButton">Cancel</button>
           <button id="submitTaskButton">Add Task</button>
