Botões visiveis apenas para PO.
Front end mostra os botoes dependendo do role.

--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -113,8 +113,10 @@
     <img id="trashIcon" src="resources/Icons/trash.png" alt="Trash Icon" />
     <aside>
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
-      <button id="addTaskButton">Add User</button>
+      <button id="addUserButton">Add User</button>
     </aside>
+
+    <div id="modal-adduser"></div>
 
     <div id="newTaskModal" class="modal">
       <div class="modal-content">
