Update task a funcionar
be e fe a dar,

--- a/Frontend/editTaskPage.html
+++ b/Frontend/editTaskPage.html
@@ -52,6 +52,9 @@
                     <option value="medium">Medium</option>
                     <option value="high">High</option>
                 </select>
+
+                <label for="editTaskCategory">Category:</label>
+                <select id="editTaskCategory" name="category"></select>
             </div>
             <div class="modal-footer">
                 <button type="button" id="CancelaEditarTarefa">Cancel</button>
