--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -108,7 +108,8 @@
         />
       </div>
       <!-- CONTAINER DA TABLE -->
-      <div class="container-users t-design" id="users"></div>
+      <!--<div class="container-users t-design" id="users"></div>-->
+      <div id="tableContainer"></div>
     </div>
     <img id="trashIcon" src="resources/Icons/trash.png" alt="Trash Icon" />
     <aside>
