--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -136,15 +136,10 @@
       <button class="btn-interface">Task Category</button>
 
       <div id="filters">
+        
         <!-- Filter by category -->
         <label for="categoryFilter">Filter by category:</label>
-        <select id="categoryFilter">
-          <!-- Add your categories here -->
-          <option value="category1">Category 1</option>
-          <option value="category2">Category 2</option>
-          <!-- ... -->
-        </select>
-
+        <select id="categoryFilter"></select>
         <!-- Filter by owner -->
         <label for="ownerFilter">Filter by owner:</label>
         <select id="ownerFilter"></select>
