tabela com listener

--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -134,6 +134,7 @@
       <button id="addTaskButton" class="btn-interface">Add Task</button>
       <button id="usersButton" class="btn-interface">Users</button>
       <button class="btn-interface">Task Category</button>
+      <button id="deletedTasksButton" class="btn-interface">Deleted Tasks</button>
 
       <div id="filters">
         
