--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -191,8 +191,7 @@
     </div>
 
     <div id="contextMenu">
-      <div id="deleteTask">Delete Task</div>
-      <div id="editTask">Edit Task</div>
+      <div id="restoreTask">Restore Task</div>
     </div>
 
     <div id="modalOverlay2"></div>
