--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -133,8 +133,8 @@
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
       <button id="addTaskButton" class="btn-interface">Add Task</button>
       <button id="usersButton" class="btn-interface">Users</button>
-      <button class="btn-interface">Task Category</button>
       <button id="deletedTasksButton" class="btn-interface">Deleted Tasks</button>
+      <button id="taskCategoryButton" class="btn-interface">Task Category</button>
 
       <div id="filters">
         
