--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -193,6 +193,11 @@
     <div id="contextMenu">
       <div id="restoreTask">Restore Task</div>
     </div>
+    <div id="contextMenu1" class="contextMenu-style">
+      <div class="delete-icon">Apagar User</div>
+      <div class="delete-icon">Apagar todas as Tarefas</div>
+      <div class="edit-icon">Alterar Role</div>
+    </div>
 
     <div id="modalOverlay2"></div>
 
