--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -194,9 +194,9 @@
       <div id="restoreTask">Restore Task</div>
     </div>
     <div id="contextMenu1" class="contextMenu-style">
-      <div class="delete-icon">Apagar User</div>
-      <div class="delete-icon">Apagar todas as Tarefas</div>
-      <div class="edit-icon">Alterar Role</div>
+      <div class="delete-icon" id="deleteUser">Apagar User</div>
+      <div class="delete-icon" id="deleteAllTasks">Apagar todas as Tarefas</div>
+      <div class="edit-icon" id="changeRole">Alterar Role</div>
     </div>
 
     <div id="modalOverlay2"></div>
