Atualiza active status FE & BE

--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.1.0/css/boxicons.min.css" />
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.1.0/css/boxicons.min.css"
+    />
   </head>
 
   <body>
@@ -14,14 +15,15 @@
       <div id="dateTimeDisplay"></div>
       <div id="userDisplay">
         <div id="labelWelcome">
-          <span id="labelUser">Welcome, </span><span
-            id="displayUsername"></span>
+          <span id="labelUser">Welcome, </span
+          ><span id="displayUsername"></span>
         </div>
         <img
           id="userIcon"
           src="resources/Avatars/avatar1.png"
           alt="User Icon"
-          draggable="false" />
+          draggable="false"
+        />
         <button id="logoutButton">Logout<i class="bx bx-power-off"></i></button>
         <button id="editProfileButton">
           Edit Profile<i class="bx bx-edit"></i>
@@ -33,71 +35,79 @@
       id="argola1"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola2"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola3"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola4"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola5"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola6"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola7"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola8"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola9"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola10"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola11"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
     <img
       id="argola12"
       src="resources/Elements/argola.png"
       alt="argola"
-      draggable="false" />
+      draggable="false"
+    />
 
     <div class="titulos">
       <h2>To Do</h2>
     </div>
-    <div
-      id="todo"
-      class="taskArea"
-      ondrop="drop(event)"
-      ondragover="allowDrop(event)">
+    <div id="todo" class="taskArea">
       <div class="tasks-container">
         <!--Tarefas ficam por aqui-->
       </div>
@@ -106,11 +116,7 @@
     <div class="titulos">
       <h2>Doing</h2>
     </div>
-    <div
-      id="doing"
-      class="taskArea"
-      ondrop="drop(event)"
-      ondragover="allowDrop(event)">
+    <div id="doing" class="taskArea">
       <div class="tasks-container"></div>
       <!--Tarefas ficam por aqui-->
     </div>
@@ -118,11 +124,7 @@
     <div class="titulos">
       <h2>Done</h2>
     </div>
-    <div
-      id="done"
-      class="taskArea"
-      ondrop="drop(event)"
-      ondragover="allowDrop(event)">
+    <div id="done" class="taskArea">
       <div class="tasks-container">
         <!--Tarefas ficam por aqui-->
       </div>
@@ -133,11 +135,14 @@
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
       <button id="addTaskButton" class="btn-interface">Add Task</button>
       <button id="usersButton" class="btn-interface">Users</button>
-      <button id="deletedTasksButton" class="btn-interface">Deleted Tasks</button>
-      <button id="taskCategoryButton" class="btn-interface">Task Category</button>
+      <button id="deletedTasksButton" class="btn-interface">
+        Deleted Tasks
+      </button>
+      <button id="taskCategoryButton" class="btn-interface">
+        Task Category
+      </button>
 
       <div id="filters">
-        
         <!-- Filter by category -->
         <label for="categoryFilter">Filter by category:</label>
         <select id="categoryFilter"></select>
@@ -160,7 +165,8 @@
             id="taskTitle"
             name="taskTitle"
             placeholder="Insert title here"
-            required></textarea>
+            required
+          ></textarea>
         </div>
         <div class="input-container">
           <label for="taskDescription">Task Description:</label>
@@ -168,7 +174,8 @@
             id="taskDescription"
             name="taskDescription"
             placeholder="Insert description here"
-            required></textarea>
+            required
+          ></textarea>
         </div>
         <div class="input-container">
           <label for="initialDate">Initial Date:</label>
