--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -115,6 +115,8 @@
     <aside>
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
       <button id="addUserButton">Add User</button>
+      <button id="restoreAllTasksButton" class="btn-interface">Restore All Tasks</button>
+      <button id="deleteAllTasksButton" class="btn-interface">Delete All Tasks</button>
     </aside>
 
     <div id="modal-adduser"></div>
@@ -192,7 +194,9 @@
 
     <div id="contextMenu">
       <div id="restoreTask">Restore Task</div>
+      <div id="deleteTask">Delete Task</div>
     </div>
+
     <div id="contextMenu1" class="contextMenu-style">
       <div class="delete-icon" id="deleteUser">Apagar User</div>
       <div class="delete-icon" id="deleteAllTasks">Apagar todas as Tarefas</div>
