--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -185,7 +185,7 @@
     </div>
 
     <div class="modal" id="deleteWarning">
-      <p class="message">Do you want to delete this task?</p>
+      <p class="message">Do you want to delete it permanently?</p>
       <div class="options">
         <button class="btn" id="noButtonDelete">No</button>
         <button class="btn" id="yesButtonDelete">Yes</button>
@@ -200,8 +200,7 @@
     <div id="contextMenu1" class="contextMenu-style">
       <div class="edit-icon" id="editUser">Editar User</div>
       <div class="edit-icon" id="changeRole">Alterar Role</div>
-
-      <div class="delete-icon" id="deleteAllTasks">Apagar todas as Tarefas</div>
+      <div class="delete-icon" id="deleteAllTasksContext">Apagar todas as Tarefas</div>
       <div class="delete-icon" id="deleteUser">Apagar User</div>
     </div>
 
