Edit Delete Update users

--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -115,8 +115,12 @@
     <aside>
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
       <button id="addUserButton">Add User</button>
-      <button id="restoreAllTasksButton" class="btn-interface">Restore All Tasks</button>
-      <button id="deleteAllTasksButton" class="btn-interface">Delete All Tasks</button>
+      <button id="restoreAllTasksButton" class="btn-interface">
+        Restore All Tasks
+      </button>
+      <button id="deleteAllTasksButton" class="btn-interface">
+        Delete All Tasks
+      </button>
       <button id="addCategoryButton" class="btn-interface">Add Category</button>
     </aside>
 
@@ -183,17 +187,15 @@
     </div>
 
     <div id="contextMenu1" class="contextMenu-style">
-      <div class="edit-icon" id="editUser">Editar User</div>
-      <div class="edit-icon" id="changeRole">Alterar Role</div>
-      <div class="delete-icon" id="deleteAllTasksContext">Apagar todas as Tarefas</div>
-      <div class="delete-icon" id="deleteUser">Apagar User</div>
+      <div class="edit-icon" id="editUser">Edit User</div>
+      <div class="delete-icon" id="deleteAllTasksContext">Delete All Tasks</div>
+      <div class="delete-icon" id="deleteUser">Delete User</div>
     </div>
 
     <div id="contextMenu2" class="contextMenu-style">
       <div class="edit-icon" id="deleteCategory">Delete</div>
       <div class="edit-icon" id="editCategory">Edit</div>
     </div>
-  
 
     <div id="modalOverlay2"></div>
 
