--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -9,12 +9,9 @@
     <container class="register-container">
       <form id="registerForm">
         <h2 class="registerH2" id="register-page-title">Register Page</h2>
-        <label class="registerLabel ownerOption" for="role">Role:</label><br />
-        <select
-          class="registerSelect registerForm ownerOption"
-          id="role"
-          name="role"
-        >
+        <label class="ownerOption" for="role" id="role-label">Role:</label
+        ><br />
+        <select class="registerForm" id="role" name="role">
           <option value="dev">Developer</option>
           <option value="sm">SCRUM Master</option>
           <option value="po">Product Owner</option></select
