--- a/Frontend/editProfile.html
+++ b/Frontend/editProfile.html
@@ -8,6 +8,14 @@
   <body class="edit-profile-body">
     <form id="editProfileForm">
       <h2>Edit Profile Page</h2>
+
+      <label class="registerLabel ownerOption" for="role">Role:</label><br />
+      <select class="registerForm ownerOption" id="role" name="role">
+        <option value="dev">Developer</option>
+        <option value="sm">SCRUM Master</option>
+        <option value="po">Product Owner</option></select
+      ><br />
+
       <label for="username">Username:</label><br />
       <input
         type="text"
@@ -27,13 +35,15 @@
       <input type="tel" id="phone" name="phone" /><br />
       <label for="photo">Photo URL:</label><br />
       <input type="url" id="photo" name="photo" /><br />
+
+      <br />
       <img
         src=""
         id="photoPreview"
         alt="Photo Preview"
         style="width: 200px; height: 200px"
       />
-      <div id="roleOptions"></div>
+
       <br />
 
       <button
