--- a/Frontend/editProfile.html
+++ b/Frontend/editProfile.html
@@ -10,7 +10,12 @@
       <h2>Edit Profile Page</h2>
 
       <label class="registerLabel ownerOption" for="role">Role:</label><br />
-      <select class="registerForm ownerOption" id="role" name="role">
+      <select
+        class="registerForm ownerOption"
+        style="display: none"
+        id="role"
+        name="role"
+      >
         <option value="dev">Developer</option>
         <option value="sm">SCRUM Master</option>
         <option value="po">Product Owner</option></select
