--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -11,7 +11,7 @@
         <h2 class="registerH2" id="register-page-title">Register Page</h2>
         <label class="ownerOption" for="role" id="role-label">Role:</label
         ><br />
-        <select class="registerForm" id="role" name="role">
+        <select class="registerForm ownerOption" id="role" name="role">
           <option value="dev">Developer</option>
           <option value="sm">SCRUM Master</option>
           <option value="po">Product Owner</option></select
