--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -153,7 +153,7 @@
         <!-- Filter buttons -->
         <button id="resetFilters">Reset Filters</button>
       </div>
-      
+
     </aside>
 
     <div id="newTaskModal" class="modal">
@@ -232,8 +232,8 @@
     </div>
 
     <div id="contextMenu">
-      <div id="deleteTask">Delete Task</div>
-      <div id="editTask">Edit Task</div>
+      <div class = "edit-icon" id="deleteTask">Delete Task</div>
+      <div class = "edit-icon" id="editTask">Edit Task</div>
     </div>
 
     <div id="modalOverlay2"></div>
