--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -182,8 +182,8 @@
     </div>
 
     <div id="contextMenu">
-      <div id="restoreTask">Restore Task</div>
-      <div id="deleteTask">Delete Task</div>
+      <div class = "restore-icon" id="restoreTask">Restore Task</div>
+      <div class = "delete-icon" id="deleteTask">Delete Task</div>
     </div>
 
     <div id="contextMenu1" class="contextMenu-style">
