Info tasks feita

--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -206,12 +206,19 @@
 
     <div id="taskDetailsModal" class="modal">
       <div class="modal-content">
-        <h4 id="taskTitleinfo"></h4>
+        <h3>Title:</h3>
+        <p id="taskTitleinfo"></p>
+        <h3>Description:</h3>
         <p id="taskDescriptioninfo"></p>
-        <p>Initial Date:</p>
+        <h3>Initial Date:</h3>
         <p id="taskInitialDateinfo"></p>
-        <p>Final Date:</p>
+        <h3>Final Date:</h3>
         <p id="taskFinalDateinfo"></p>
+        <h3>Category:</h3>
+        <p id="taskCategoryinfo"></p>
+        <h3>Owner:</h3>
+        <p id="taskOwnerinfo"></p>
+        <p></p>
         <button id="modalOkButton">OK</button>
       </div>
     </div>
