--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -113,6 +113,7 @@
     </div>
     <img id="trashIcon" src="resources/Icons/trash.png" alt="Trash Icon" />
     <aside>
+      <div id="backLogo"></div>
       <img id="logo" src="resources/Logos/logo.png" alt="Logo" />
       <button id="addUserButton">Add User</button>
       <button id="restoreAllTasksButton" class="btn-interface">
@@ -122,6 +123,7 @@
         Delete All Tasks
       </button>
       <button id="addCategoryButton" class="btn-interface">Add Category</button>
+      <button class="btn-interface" id="backButton">Back</button>
     </aside>
 
     <div id="modal-adduser"></div>
@@ -182,8 +184,8 @@
     </div>
 
     <div id="contextMenu">
-      <div class = "restore-icon" id="restoreTask">Restore Task</div>
-      <div class = "delete-icon" id="deleteTask">Delete Task</div>
+      <div class="restore-icon" id="restoreTask">Restore Task</div>
+      <div class="delete-icon" id="deleteTask">Delete Task</div>
     </div>
 
     <div id="contextMenu1" class="contextMenu-style">
