--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -16,7 +16,7 @@
       <div id="userDisplay">
         <div id="labelWelcome">
           <span id="labelUser">Welcome, </span
-          ><span id="displayUsername"></span>
+          ><a href="./editProfile.html" id="displayUsername"></a>
         </div>
         <img
           id="userIcon"
@@ -25,9 +25,9 @@
           draggable="false"
         />
         <button id="logoutButton">Logout<i class="bx bx-power-off"></i></button>
-        <button id="editProfileButton">
+        <!-- <button id="editProfileButton">
           Edit Profile<i class="bx bx-edit"></i>
-        </button>
+        </button> -->
       </div>
     </header>
 
@@ -153,7 +153,6 @@
         <!-- Filter buttons -->
         <button id="resetFilters">Reset Filters</button>
       </div>
-
     </aside>
 
     <div id="newTaskModal" class="modal">
