--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -245,7 +245,7 @@
     </div>
 
     <div id="contextMenu">
-      <div class = "edit-icon" id="deleteTask">Delete Task</div>
+      <div class = "delete-icon" id="deleteTask">Delete Task</div>
       <div class = "edit-icon" id="editTask">Edit Task</div>
     </div>
 
