--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -195,7 +195,7 @@
     </div>
 
     <div id="contextMenu2" class="contextMenu-style">
-      <div class="edit-icon" id="deleteCategory">Delete</div>
+      <div class="delete-icon" id="deleteCategory">Delete</div>
       <div class="edit-icon" id="editCategory">Edit</div>
     </div>
 
