--- a/Frontend/interface.html
+++ b/Frontend/interface.html
@@ -197,7 +197,7 @@
             <label for="taskCategory">Category:</label>
             <select
               id="taskCategory"
-              class="dropdown-btn"
+              class="dropdown-btn dropdown-btn-category"
               name="category"
             ></select>
           </div>
@@ -244,8 +244,8 @@
     </div>
 
     <div id="contextMenu">
-      <div class = "delete-icon" id="deleteTask">Delete Task</div>
-      <div class = "edit-icon" id="editTask">Edit Task</div>
+      <div class="delete-icon" id="deleteTask">Delete Task</div>
+      <div class="edit-icon" id="editTask">Edit Task</div>
     </div>
 
     <div id="modalOverlay2"></div>
