--- a/Frontend/editTaskPage.html
+++ b/Frontend/editTaskPage.html
@@ -9,14 +9,20 @@
     <header>
       <div id="dateTimeDisplay"></div>
       <div id="userDisplay">
-        <span id="labelUser">Welcome, </span>
-        <span id="displayUsername"></span>
+        <div id="labelWelcome">
+          <span id="labelUser">Welcome, </span
+          ><a href="./editProfile.html" id="displayUsername"></a>
+        </div>
         <img
           id="userIcon"
           src="resources/Avatars/avatar1.png"
           alt="User Icon"
           draggable="false"
         />
+
+        <!-- <button id="editProfileButton">
+          Edit Profile<i class="bx bx-edit"></i>
+        </button> -->
       </div>
     </header>
     <aside>
