Ajustes ao avatar do canto

--- a/Frontend/editTaskPage.html
+++ b/Frontend/editTaskPage.html
@@ -13,12 +13,9 @@
           <span id="labelUser">Welcome, </span
           ><a href="./editProfile.html" id="displayUsername"></a>
         </div>
-        <img
-          id="userIcon"
-          src="resources/Avatars/avatar1.png"
-          alt="User Icon"
-          draggable="false"
-        />
+        <div id="userIconContainer">
+          <img id="userIcon" src="resources/Avatars/avatar1.png" alt="User Icon" draggable="false" />
+        </div>
 
         <!-- <button id="editProfileButton">
           Edit Profile<i class="bx bx-edit"></i>
