--- a/Frontend/interfaceUsers.html
+++ b/Frontend/interfaceUsers.html
@@ -18,12 +18,9 @@
           <span id="labelUser">Welcome, </span
           ><a href="./editProfile.html" id="displayUsername"></a>
         </div>
-        <img
-          id="userIcon"
-          src="resources/Avatars/avatar1.png"
-          alt="User Icon"
-          draggable="false"
-        />
+        <div id="userIconContainer">
+          <img id="userIcon" src="resources/Avatars/avatar1.png" alt="User Icon" draggable="false" />
+        </div>
         <button id="logoutButton">Logout<i class="bx bx-power-off"></i></button>
         <!-- <button id="editProfileButton">
           Edit Profile<i class="bx bx-edit"></i>
